...
          },
          validator: (value) {
            return value?.isNotEmpty == true ? null : 'الاسم مطلوب';
          },
        ),
        CustomAuthTextFormField(
          key: const Key('email_field'),
          initialValue: signUpReq.email?.value,
          hintText: 'البريد الإلكتروني',
          prefixIcon: const Icon(Icons.email_outlined),
          keyboardType: TextInputType.emailAddress,
          onChanged: (v) {
            getIt<SignUpBloc>().add(
...
            getIt<SignUpBloc>().add(
              .dataChanged(signUpReq: signUpReq.copyWith(phone: .dirty(v))),
            );
          },
        ),
        CustomAuthTextFormField(
          key: const Key('password_field'),
          hintText: 'كلمة المرور',
          initialValue: signUpReq.password?.value,
          prefixIcon: const Icon(Icons.lock_outline),
          obscureText: signUpReq.obscurePassword,
          showPasswordToggle: true,
          onChanged: (v) {
...
