...
  @override
  Widget build(BuildContext context) {
    return SizedBox(
      height: height ?? 60.h,
      width: width ?? 332.w,
      child: ElevatedButton(
        key: const Key('signIn_button'),
        onPressed: onPressed,
        style:
            ElevatedButton.styleFrom(
              backgroundColor: backgroundColor ?? const Color(0xFF83BEA8),
              shape: RoundedRectangleBorder(
                borderRadius: BorderRadius.circular(14.r),
...
