...
  }

  @override
  Widget build(BuildContext context) {
    return CustomScaffold(
      appBar: CustomAppBar(
        title: 'طلبات',
        actions: [
          BlocBuilder<OrdersBloc, OrdersState>(
            builder: (context, state) {
              return OrdersFilterWidget(
                selectedStatus: state.maybeWhen(
                  loaded: (_, status) {
...
